--- a/index.html
+++ b/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML and CSS</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+  <body>
+    <header>
+        <a href="" class="logo">site name</a>
+        <nav>
+            <ul>
+                <li><a href="">link 1</a></li>
+                <li><a href="">link 2</a></li>
+                <li><a href="">link 3</a></li>
+                <li><a href="">link 4</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h1>main title</h1>
+        <article id="article1" class="article">
+            <h2 class="subtitle">title article 1</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis dignissimos veniam tempora repellat esse deserunt nihil praesentium ratione quo, numquam quis ipsam voluptate, totam quidem accusantium aperiam quibusdam unde? Ipsam, iste.</p>
+            <p>Animi, obcaecati. Nam necessitatibus ipsa est reprehenderit saepe doloremque asperiores dicta obcaecati illo distinctio pariatur corporis ipsam, nemo, vel nisi tempore earum soluta rem ullam adipisci! Neque, saepe molestiae. Ipsa, inventore consectetur?</p>
+            <p>Excepturi odit distinctio deleniti quaerat corporis, tempore officiis fugit quasi accusantium libero aspernatur illum iure eum quod nisi itaque quo ullam tenetur culpa hic. Reiciendis corrupti alias fugiat autem inventore maiores quas!</p>
+        </article>
+        <article id="article2" class="article">
+            <h2 class="subtitle">title article 2</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus fugiat molestiae unde doloremque rerum quo molestias nisi voluptatum obcaecati commodi numquam aspernatur quisquam voluptates error, natus ipsa excepturi illum temporibus aperiam sed.</p>
+            <p>Repellendus aut voluptates dolores obcaecati, aperiam saepe eum consequatur tempore debitis? Rem, non doloribus, voluptate sit praesentium at ratione atque ea quia officia ipsum quo quod minus ex! Maxime ducimus illo est?</p>
+            <p>Error reprehenderit ducimus illum obcaecati temporibus, odit sint, cum ad vel dolor consequuntur animi. Asperiores, consectetur eaque fugiat molestias laudantium tempore ipsa numquam iusto tempora expedita provident libero aperiam quam, blanditiis consequatur.</p>
+        </article>
+        <article id="article3" class="article">
+            <h2 class="subtitle">title article 3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto ex architecto sed, expedita in neque maiores harum id ipsa laborum! Illum ut quam, nulla quasi exercitationem eligendi necessitatibus quidem recusandae similique eius.</p>
+            <p>Assumenda quo iusto saepe animi hic error odit dolorem cupiditate. Aliquid repellendus suscipit quis porro earum aspernatur quas! Aspernatur rerum molestiae, iste ullam debitis omnis asperiores? Aperiam natus excepturi debitis recusandae earum?</p>
+            <p>Rem, ea laudantium? Atque iste voluptates sed? Sit quod, minima soluta facere optio iure voluptas totam necessitatibus ea nam nulla vero tempore non deleniti eligendi quaerat reprehenderit consequuntur placeat labore iste? Ipsam?</p>
+        </article>
+    </section>
+  </body>
 </html>
