--- a/index.html
+++ b/index.html
@@ -7,30 +7,24 @@
     <title>HTML and CSS</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap"
-      rel="stylesheet"
-    />
+    <link  href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,700&display=swap" rel="stylesheet" />
+    <link  href="https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
     <header>
-      <a href="" class="logo">site name</a>
-      <nav>
-        <ul>
-          <li><a href="">link 1</a></li>
-          <li><a href="">link 2</a></li>
-          <li><a href="">link 3</a></li>
-          <li><a href="">link 4</a></li>
-        </ul>
-      </nav>
+        <a href="" class="logo font-accent">site name</a>
+        <nav>
+            <ul>
+                <li><a href="#article1">link 1</a></li>
+                <li><a href="#article2">link 2</a></li>
+                <li><a href="#article3">link 3</a></li>
+                <li><a href="#article4">link 4</a></li>
+            </ul>
+        </nav>
     </header>
     <section>
-      <h1>main title</h1>
+      <h1 class="font-accent" style="font-size: 80px;">main title</h1>
       <article id="article1" class="article">
         <h2 class="subtitle">title article 1</h2>
         <p>
