--- a/assets/index.html
+++ b/assets/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <section>
-        <p class="experience">
+        <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </p>
         <p>
@@ -31,7 +31,7 @@
           dicta?
         </p>
       </section>
-      <h2 class="title-skills">Skills</h2>
+      <h2 class="title">Skills</h2>
       <section>
         <h3>Tech stack</h3>
         <p>
@@ -41,11 +41,24 @@
         <h3>Databases</h3>
         <p>
             <ul>
-                <li></li>
-                <li></li>
+                <li><strong>SQL</strong>: Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+                <li><strong>NoSQL</strong>: Lorem.</li>
             </ul>
         </p>
+        <h3>Environment & Tools</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
       </section>
+      <article>
+        <h2 class="title">Experiens</h2>
+        <h3>Scalified LLC</h3>
+        <h3 class="lead">Lead Backend Engineer Sep. 2016 - Present</h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit eius reiciendis aliquid perferendis dicta eum!</li>
+            <li>Consectetur unde omnis libero accusamus praesentium corporis laborum autem, itaque quia nihil perspiciatis eum quasi?</li>
+            <li>Aut eaque blanditiis ipsam nobis ea illo sapiente neque, sunt et soluta aspernatur, qui adipisci!</li>
+            <li>Unde dolorum sequi laboriosam perspiciatis hic ratione vel facilis temporibus earum, quisquam quis inventore necessitatibus.</li>
+        </ul>
+      </article>
     </main>
   </body>
 </html>
