--- a/assets/index.html
+++ b/assets/index.html
@@ -59,6 +59,7 @@
             <li>Unde dolorum sequi laboriosam perspiciatis hic ratione vel facilis temporibus earum, quisquam quis inventore necessitatibus.</li>
         </ul>
       </article>
+      <footer><a href="../index.html">BACK</a></footer>
     </main>
   </body>
 </html>
