--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#article1">link 1</a></li>
                 <li><a href="#article2">link 2</a></li>
                 <li><a href="#article3">link 3</a></li>
-                <li><a href="#article4">link 4</a></li>
+                <li><a href="./assets/index.html">Contacts</a></li>
             </ul>
         </nav>
     </header>
