--- a/index.html
+++ b/index.html
@@ -18,87 +18,11 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <table>
-      <thead>
-        <tr>
-          <th>
-            <p>Choose your plan</p>
-          </th>
-          <th>
-            <p>starter</p>
-            <p>10</p>
-            <p>mounth</p>
-          </th>
-          <th>
-            <p>starter</p>
-            <p>10</p>
-            <p>mounth</p>
-          </th>
-          <th>
-            <p>starter</p>
-            <p>10</p>
-            <p>mounth</p>
-          </th>
-          <th>
-            <p>starter</p>
-            <p>10</p>
-            <p>mounth</p>
-          </th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-        <tr>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-          <td>info</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <th></th>
-          <th><button>START</button></th>
-          <th><button>START</button></th>
-          <th><button>START</button></th>
-          <th><button>START</button></th>
-        </tr>
-      </tfoot>
-    </table>
+    <main>
+      <section class="slider">
+        <img class="slide" src="./assets/images/p07ryyyj.jpg" alt="">
+      </section>
+    </main>
+    </div>
   </body>
 </html>
